@@ -11,6 +11,13 @@ Changes
 * added support for NumPy style fancy indexing to corpus objects (Matti Lyra, #414)
 * py3k fix in distributed LSI (spacecowboy, #433)
 * Windows fix for setup.py (#428)
+* Make show_topics return value consistent across models (Christopher Corley, #448)
+  - All models with the `show_topics` method should return a list of
+    `(topic_number, topic)` tuples, where `topic` is a list of
+    `(word, probability)` tuples.
+  - This is a breaking change that affects users of the `LsiModel`, `LdaModel`,
+  and `LdaMulticore` that may be reliant on the old tuple layout of
+  `(probability, word)`.
 
 0.12.1, 20/07/2015
 
